# OMPEval

./: CMakeLists.txt  setup.py
omp/: Evaluator.cpp  Evaluator.h
pyompeval/: __init__.py  ompeval.pxd  ompeval.pyx
